# cocore-py

./: CLAUDE.md  README.md  hk.pkl  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  pr-env-config.yml  provider-pr-build.yml  release.yml  smoke.yml
docs/: 0.9.19-optional-confidential.md  api-keys.md  confidential-code-identity.md  confidential-deploy-runbook.md  cutover-prod.md  deploy-railway.md
docs/adr/: 0002-model-identity-and-output-binding.md  0003-key-residency-and-soft-cutover.md  0004-brokerage-attestation-authority.md  0005-se-resident-key-parity-and-soft-cutover.md  0006-tier-lifecycle-robustness-and-handshake.md
docs/plans/: 0003-confidential-hardening-plan.md
docs/security/: darkbloom-parity.md
docs/superpowers/specs/: 2026-07-05-provider-py-config-file-design.md
infra/: smoke.ts
infra/advisor/: package.json
infra/advisor/src/: apns.ts  attest.ts  brokerage.test.ts  brokerage.ts  code-attest.test.ts  connection-security.test.ts  connection.ts  did-auth.test.ts  events.ts  jobs.test.ts  jobs.ts  latency-store.test.ts  latency-store.ts  latency-window.test.ts  latency-window.ts  main.ts  metrics.ts  protocol.ts  registry.test.ts  registry.ts  sessions.test.ts  sessions.ts  version.test.ts  version.ts
infra/mdm/: README.md  RUNBOOK.md
infra/mdm/profiles/: cocore-attestation.mobileconfig
infra/mdm/step-ca/: provisioner.json
infra/services/src/: main.ts  receipt-pipeline.test.ts  receipt-pipeline.ts  resolve-record.test.ts  resolve-record.ts
lexicons/: README.md
lexicons/dev/cocore/: defs.json
lexicons/dev/cocore/account/: createApiKey.json  defs.json  deleteApiKey.json  getProfile.json  listAccounts.json  listApiKeys.json  listFriendEdges.json  listIncomingFriends.json  listProfiles.json  revokeApiKey.json
lexicons/dev/cocore/compute/: attestation.json  defs.json  job.json  latency.json  listJobs.json  listProviders.json  listReceipts.json  listSettlements.json  modelActivity.json  provider.json  receipt.json  verifyReceipt.json  verifySettlement.json
lexicons/dev/cocore/inference/: dispatch.json  status.json  submit.json
provider/: Cargo.toml  build.rs  cocore-provider.entitlements
provider-py/: README.md  config.toml.example  pyproject.toml
provider-py/src/cocore_provider/: attestation.py  cli.py  config.py  config_file.py  crypto.py  diagnostics.py  geoip.py  hypervisor.py  identity.py  lmstudio.py  logging_setup.py  pds_client.py  pricing.py  protocol.py  provider_record.py  receipt.py  session.py  ws_client.py
provider-py/tests/: test_attestation.py  test_cli_config_wiring.py  test_cli_diagnostics.py  test_cli_integration.py  test_cli_version.py  test_config.py  test_config_file.py  test_crypto.py  test_diagnostics.py  test_geoip.py  test_hypervisor.py  test_identity.py  test_lmstudio.py  test_logging_setup.py  test_pds_client.py  test_pricing.py  test_protocol.py  test_provider_record.py  test_receipt.py  test_session.py  test_ws_client.py
provider-shell/Sources/CoCoreShell/: AgentSupervisor.swift  CocoreShellApp.swift  MainTabView.swift  MenuBarController.swift  ModelsView.swift  PreferencesView.swift  SecureModeWizard.swift  StatusView.swift  WelcomeView.swift
provider-shell/Sources/CoCoreShell/Resources/: Info.plist
provider/enclave/Sources/CoCoreEnclave/: SecureEnclaveIdentity.swift
provider/enclave/Sources/CoCoreEnclave/include/: CoCoreEnclave.h
provider/enclave/Tests/CoCoreEnclaveTests/: SecureEnclaveIdentityTests.swift
provider/examples/: codesign_probe.rs
provider/mlx-engine/: .gitignore  Package.resolved  Package.swift
provider/mlx-engine/Sources/CoCoreMLX/: MLXBridge.swift  MLXEngine.swift  PushHost.swift
provider/mlx-engine/Sources/CoCoreMLX/include/: CoCoreMLX.h
provider/mlx-engine/Sources/cocore-mlx-smoke/: main.swift
provider/python/: cocore_inference_server.py
provider/scripts/: sign-and-notarize.sh
provider/spikes/: SPIKE_RESULTS.md
provider/spikes/apns/: .gitignore  README.md  build-receiver.sh
provider/spikes/apns/receiver/: Info.plist  entitlements.plist  main.swift
provider/spikes/apns/sender/: send.swift
provider/spikes/app-attest/: README.md  build.sh  run.sh
provider/spikes/app-attest/helper/: Info.plist  entitlements.plist  main.swift
provider/spikes/s3-cdhash/: .gitignore  cdhash_probe.swift  run.sh
provider/src/: advisor.rs  appattest.rs  attestation.rs  codesign.rs  crypto.rs  error.rs  lib.rs  main.rs  mda.rs  mda_loader.rs  oauth.rs  pds.rs  pricing.rs  protocol.rs  push_host.rs  receipt.rs  secure_enclave.rs  security.rs  update.rs
provider/src/engines/: mod.rs  native_mlx.rs  subprocess.rs
provider/tests/: cross_lang_fixture.rs
scripts/: audit-settlement-backlog.ts  bootstrap-python-venv.sh  build-confidential-worker.sh  build-mac-app.sh  configure-pr-env.sh  inspect-mda-freshness.sh  install-from-tarball.sh  lex-codegen.ts  register-known-good.sh  tool-calling-e2e.py  tool-calling-fullstack-e2e.py
sdk/py/cocore/: appattest.py  brokerage.py  ecies.py  mda.py  p256.py  validate.py  verify.py
sdk/py/tests/: test_appattest.py  test_brokerage.py  test_ecies.py  test_p256.py  test_verify.py
