[project]
name = "cocore-provider"
version = "0.1.0"
description = "Python cocore provider agent for LMStudio (Windows)"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
    "cryptography>=42",
    "pynacl>=1.5",
    "psutil>=5.9",
    "cocore",
]

[project.scripts]
cocore-provider = "cocore_provider.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.4"]

[tool.uv.sources]
cocore = { path = "../sdk/py", editable = true }

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "cocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cocore_provider"]
