[package]
name = "cocore-provider"
version = "0.9.22"
edition = "2021"
description = "co/core provider agent: runs hardened compute and publishes signed receipts to AT Protocol."
license = "MIT OR Apache-2.0"

[[bin]]
name = "cocore"
path = "src/main.rs"

[lib]
name = "cocore_provider"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Rolling, non-blocking file log under ~/.cocore/logs so a crash leaves a
# durable, content-safe trail instead of an NSLog line that ages out.
tracing-appender = "0.2"

# OTLP export bridge for the existing `tracing` spans/events. Wired into
# the subscriber registry in `diagnostics.rs` ONLY when
# `OTEL_EXPORTER_OTLP_ENDPOINT` is set, so the default build behaves
# exactly as before (stderr + rolling file). OTLP/HTTP-protobuf over the
# blocking reqwest client so export needs no async reactor of its own and
# reuses the rustls posture above (no native-tls, no tonic/grpc). Honeycomb
# is OTLP-native: point the endpoint at api.honeycomb.io and pass the team
# key via OTEL_EXPORTER_OTLP_HEADERS — no Honeycomb-specific code here.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "http-proto",
    "reqwest-blocking-client",
    "reqwest-rustls",
    "trace",
] }
tracing-opentelemetry = "0.33"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# `cocore agent update` extracts the release tarball in-process so we
# don't need a system tar / curl in the path. flate2's `rust_backend`
# avoids linking libz dynamically (matches the rustls-tls choice
# above — the binary stays portable across mac mini installs).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"

anyhow = "1"
thiserror = "2"

uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

# NaCl-compatible X25519 + XSalsa20-Poly1305 (see `crypto.rs` for wire layout).
crypto_box = "0.9"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Real P-256 ECDSA for software-fallback signing identities and for
# cross-language signature verification.
p256 = { version = "0.13", features = ["ecdsa", "pem"] }

# Apple Managed Device Attestation cert chain verification.
# x509-parser handles DER parsing + ECDSA signature verification; we
# only have to drive the chain walk and OID extraction.
x509-parser = { version = "0.16", features = ["verify"] }
asn1-rs = "0.6"
oid-registry = "0.7"

# POSIX / libc — used for PT_DENY_ATTACH and rlimit calls on macOS
libc = "0.2"

# v0.6.0 removed PyO3 + the `inference` feature flag entirely. The
# agent now spawns inference as a Python subprocess (see
# `provider/src/engines/subprocess.rs`) that hosts vllm-mlx on a Unix
# domain socket; the Rust binary has zero libpython linkage and
# `otool -L cocore` shows only Apple frameworks. This fixed the
# "Library not loaded: /opt/homebrew/opt/python@3.12/..." dyld crash
# that bit every user whose Mac didn't have Homebrew Python at the
# CI runner's exact path.

[features]
default = []
# Links the macOS-only Secure Enclave Swift framework. Without this,
# the agent uses a software P-256 fallback (still self-attested).
secure_enclave = []
# WS-ENGINE: native in-process MLX inference engine. Off by default so the
# Linux/CI build (and any host without the Metal toolchain) stays green. The
# scaffold compiles without mlx-rs; wiring the actual MLX calls requires a
# full-Xcode build host (the Metal shader compiler) — see
# provider/spikes/SPIKE_RESULTS.md (S1/S2). When enabled, the engine reports
# in_process=true and pins the precompiled signed mlx.metallib hash.
native_mlx = []
# APNs code-identity push host (confidential tier). Implies native_mlx because
# the measured binary that receives the push is the same one that runs
# in-process inference and holds K. macOS-only at the code level (the module is
# additionally cfg(target_os = "macos")). Off by default so Linux/CI stays green.
apns = ["native_mlx"]

[dev-dependencies]
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order"] }
# Generate self-signed cert chains in MDA tests so we don't have
# to ship a real Apple-attested device chain in the repo.
rcgen = "0.13"
time = "0.3"
